--- a/FlatSurfacesOnTheNight/gtk-3.0/gtk.css
+++ b/FlatSurfacesOnTheNight/gtk-3.0/gtk.css
@@ -497,3 +497,11 @@ GtkInfoBar, infobar {
   background-color: @error_bg_color;
   color: @error_fg_color;
 }
+
+
+/* App-specific rule */
+.budgie-panel {
+  background-color: @bg_color;
+  color: @fg_color;
+}
+
